src/OpenCvSharp/Internal/Interop/NativeMethods.XStereo.LibraryImport.cs


        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_xstereo_binary_sgbm_set_min_disparity")]
        internal static partial int XStereoBinarySGBMSetMinDisparity(IntPtr matcher, int value);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_xstereo_binary_sgbm_get_num_disparities")]
        internal static partial int XStereoBinarySGBMGetNumDisparities(IntPtr matcher, out int value);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_xstereo_binary_sgbm_set_num_disparities")]
        internal static partial int XStereoBinarySGBMSetNumDisparities(IntPtr matcher, int value);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_xstereo_binary_sgbm_get_block_size")]
        internal static partial int XStereoBinarySGBMGetBlockSize(IntPtr matcher, out int value);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_xstereo_binary_sgbm_set_block_size")]
        internal static partial int XStereoBinarySGBMSetBlockSize(IntPtr matcher, int value);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_xstereo_binary_sgbm_get_speckle_window_size")]
        internal static partial int XStereoBinarySGBMGetSpeckleWindowSize(IntPtr matcher, out int value);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_xstereo_binary_sgbm_set_speckle_window_size")]
        internal static partial int XStereoBinarySGBMSetSpeckleWindowSize(IntPtr matcher, int value);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_xstereo_binary_sgbm_get_speckle_range")]
        internal static partial int XStereoBinarySGBMGetSpeckleRange(IntPtr matcher, out int value);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_xstereo_binary_sgbm_set_speckle_range")]
        internal static partial int XStereoBinarySGBMSetSpeckleRange(IntPtr matcher, int value);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_xstereo_binary_sgbm_get_disp12_max_diff")]
        internal static partial int XStereoBinarySGBMGetDisp12MaxDiff(IntPtr matcher, out int value);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_xstereo_binary_sgbm_set_disp12_max_diff")]
        internal static partial int XStereoBinarySGBMSetDisp12MaxDiff(IntPtr matcher, int value);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_xstereo_binary_sgbm_get_pre_filter_cap")]
        internal static partial int XStereoBinarySGBMGetPreFilterCap(IntPtr matcher, out int value);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_xstereo_binary_sgbm_set_pre_filter_cap")]
        internal static partial int XStereoBinarySGBMSetPreFilterCap(IntPtr matcher, int value);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_xstereo_binary_sgbm_get_uniqueness_ratio")]
        internal static partial int XStereoBinarySGBMGetUniquenessRatio(IntPtr matcher, out int value);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_xstereo_binary_sgbm_set_uniqueness_ratio")]
        internal static partial int XStereoBinarySGBMSetUniquenessRatio(IntPtr matcher, int value);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_xstereo_binary_sgbm_get_p1")]
        internal static partial int XStereoBinarySGBMGetP1(IntPtr matcher, out int value);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_xstereo_binary_sgbm_set_p1")]
        internal static partial int XStereoBinarySGBMSetP1(IntPtr matcher, int value);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_xstereo_binary_sgbm_get_p2")]
        internal static partial int XStereoBinarySGBMGetP2(IntPtr matcher, out int value);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_xstereo_binary_sgbm_set_p2")]
        internal static partial int XStereoBinarySGBMSetP2(IntPtr matcher, int value);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_xstereo_binary_sgbm_get_mode")]
        internal static partial int XStereoBinarySGBMGetMode(IntPtr matcher, out int value);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_xstereo_binary_sgbm_set_mode")]
        internal static partial int XStereoBinarySGBMSetMode(IntPtr matcher, int value);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_xstereo_binary_sgbm_get_spekle_removal_technique")]
        internal static partial int XStereoBinarySGBMGetSpeckleRemovalTechnique(IntPtr matcher, out int value);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_xstereo_binary_sgbm_set_spekle_removal_technique")]
        internal static partial int XStereoBinarySGBMSetSpeckleRemovalTechnique(IntPtr matcher, int value);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_xstereo_binary_sgbm_get_binary_kernel_type")]
        internal static partial int XStereoBinarySGBMGetBinaryKernelType(IntPtr matcher, out int value);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_xstereo_binary_sgbm_set_binary_kernel_type")]
        internal static partial int XStereoBinarySGBMSetBinaryKernelType(IntPtr matcher, int value);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_xstereo_binary_sgbm_get_sub_pixel_interpolation_method")]
        internal static partial int XStereoBinarySGBMGetSubPixelInterpolationMethod(IntPtr matcher, out int value);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_xstereo_binary_sgbm_set_sub_pixel_interpolation_method")]
        internal static partial int XStereoBinarySGBMSetSubPixelInterpolationMethod(IntPtr matcher, int value);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_xstereo_quasi_dense_create")]
        internal static partial int XStereoQuasiDenseCreate(int width, int height, byte[] parameterFilePath, out IntPtr stereo);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_xstereo_quasi_dense_release")]
        internal static partial void XStereoQuasiDenseRelease(IntPtr stereo);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_xstereo_quasi_dense_load_parameters")]
        internal static partial int XStereoQuasiDenseLoadParameters(IntPtr stereo, byte[] parameterFilePath, out int result);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_xstereo_quasi_dense_save_parameters")]
        internal static partial int XStereoQuasiDenseSaveParameters(IntPtr stereo, byte[] parameterFilePath, out int result);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_xstereo_quasi_dense_process")]
        internal static partial int XStereoQuasiDenseProcess(IntPtr stereo, IntPtr left, IntPtr right);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_xstereo_quasi_dense_get_sparse_matches_count")]
        internal static partial int XStereoQuasiDenseGetSparseMatchesCount(IntPtr stereo, out int count);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_xstereo_quasi_dense_get_sparse_matches_fill")]
        internal static partial int XStereoQuasiDenseGetSparseMatchesFill(IntPtr stereo, NativeXStereoMatchQuasiDense[] matches, int matchCapacity, out int count);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_xstereo_quasi_dense_get_dense_matches_count")]
        internal static partial int XStereoQuasiDenseGetDenseMatchesCount(IntPtr stereo, out int count);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_xstereo_quasi_dense_get_dense_matches_fill")]
        internal static partial int XStereoQuasiDenseGetDenseMatchesFill(IntPtr stereo, NativeXStereoMatchQuasiDense[] matches, int matchCapacity, out int count);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_xstereo_quasi_dense_get_match")]
        internal static partial int XStereoQuasiDenseGetMatch(IntPtr stereo, int x, int y, out float matchX, out float matchY);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_xstereo_quasi_dense_get_disparity")]
        internal static partial int XStereoQuasiDenseGetDisparity(IntPtr stereo, IntPtr disparity);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_xstereo_quasi_dense_get_parameters")]
        internal static partial int XStereoQuasiDenseGetParameters(IntPtr stereo, out NativeXStereoPropagationParameters parameters);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_xstereo_quasi_dense_set_parameters")]
        internal static partial int XStereoQuasiDenseSetParameters(IntPtr stereo, ref NativeXStereoPropagationParameters parameters);
    }
}
#endif
